# transitpy

./: .gitattributes  .lgtm.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: environment.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
transitpy/: __init__.py  _version.py  feed.py  filters.py  normalize.py  shapes.py  spatial.py  statistics.py  transfers.py  utils.py
transitpy/config/: defaults.py  gtfs_def.py
transitpy/datasource/: PAN.py  __init__.py  data_utils.py  datasource.py
transitpy/tests/: test_transitpy.py
