[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "transitpy"
authors = [{ name = "Vincent Tinet" }]
description = "Parse, normalize and extract information from one or multiple GTFS files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "geopandas",
    "shapely",
    "streetpy",
    "aiohttp",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/chourmo/transitpy"
Issues = "https://github.com/chourmo/transitpy/issues"
